apps/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-frigate
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8971
      targetPort: 8971
