apps/frigate/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-frigate-slice
  labels:
    kubernetes.io/service-name: external-frigate
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8971
endpoints:
  - addresses:
      - "192.168.50.4"
    conditions:
      ready: true
