apps/frigate/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: frigate-route
spec:
    parentRefs:
        - name: gatewayapi
          namespace: traefik
          sectionName: https
    hostnames:
        - ENC[AES256_GCM,data:XAVH+h6fCBCVBKY5g8bhZAM=,iv:Aq7/N+UXJYhaa5RSRW/mJHMLlzEQx4sglDrayRq96aE=,tag:7paMsUTxscGdGC9BmjlG4A==,type:str]
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: ExtensionRef
                extensionRef:
                    group: traefik.io
                    kind: Middleware
                    name: default-headers
          backendRefs:
              - name: external-frigate
                port: 8971
sops:
    age:
        - enc: |
              -----BEGIN AGE ENCRYPTED FILE-----
              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBS1BWQzY0TmdLeHdUTFpH
[...]
              dbsvSFc7SwDu/EYte9Db6UsKIfHe8BdNdPLFNdThxE3t2rgsLD0etQ==
              -----END AGE ENCRYPTED FILE-----
          recipient: age149cx2m4rwfw6argx9fam62vjtcjgeuepd78ej8f0mcpatdgxdqfslqu454
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-07-16T20:01:33Z"
    mac: ENC[AES256_GCM,data:IY7MJBSuleHba3QD/b0lorafilcOPSrL2ZH2zDnqWjXcDoGBvnQech1EQaY1rWu0KEBf6QzRj3dGctltmAehJE01gpG7D3qJNyMa7VV3tiTPvapdJUZ3ya/HiQcUdIIu5hzgjwNP5/PO7CDsuvVdqcO+mOFmo/QDajw0EAfbXK0=,iv:lFiBS/YrSBruB3x1MGqIOtUU1BSu/s0pq5kxvpm/jf4=,tag:L2edSCKHEyPw3pfPsjpv5A==,type:str]
    version: 3.13.2
